// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`strictNonNullAssertions > binaryExpressions > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": true
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "strictNullChecks": true,
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "compilerOptions": {
          "strictNullChecks": true
        },
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;

exports[`strictNonNullAssertions > binaryExpressions > output 1`] = `
"[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting the core mutation engine. This terminal will log whenever a "wave" of mutations are written to files.
[stdout] Core mutations will complete when two waves pass with no mutations.
[stdout] The following fix will be applied:
[stdout] 	* strictNonNullAssertions

[stdout] Starting wave 1...
[log] fixStrictNonNullAssertionBinaryExpressions found 4 mutations (4 insertions) in <rootDir>/actual.ts: [mutations]
[log] fixStrictNonNullAssertions found 4 mutations (4 insertions) in <rootDir>/actual.ts: [mutations]
[stdout] Completed wave 1. Wrote mutations to 1 file.
[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting wave 2...
[stdout] Completed wave 2. Wrote mutations to 0 files.
[stdout] Done.

[stdout] Applying post-fix cleanups...
[stdout] Done.
"
`;

exports[`strictNonNullAssertions > callExpressions > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": true
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false,
        "strictNullChecks": true
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;

exports[`strictNonNullAssertions > callExpressions > output 1`] = `
"[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting the core mutation engine. This terminal will log whenever a "wave" of mutations are written to files.
[stdout] Core mutations will complete when two waves pass with no mutations.
[stdout] The following fix will be applied:
[stdout] 	* strictNonNullAssertions

[stdout] Starting wave 1...
[log] fixStrictNonNullAssertionCallExpressions found 20 mutations in <rootDir>/actual.ts: [mutations]
[log] fixStrictNonNullAssertions found 20 mutations in <rootDir>/actual.ts: [mutations]
[stdout] Completed wave 1. Wrote mutations to 1 file.
[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting wave 2...
[stdout] Completed wave 2. Wrote mutations to 0 files.
[stdout] Done.

[stdout] Applying post-fix cleanups...
[log] suppressTypeIssues found 1 mutations (1 insertions) in <rootDir>/actual.ts: [mutations]
[stdout] Done.
"
`;

exports[`strictNonNullAssertions > objectLiterals > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": true
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false,
        "strictNullChecks": true
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;

exports[`strictNonNullAssertions > objectLiterals > output 1`] = `
"[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting the core mutation engine. This terminal will log whenever a "wave" of mutations are written to files.
[stdout] Core mutations will complete when two waves pass with no mutations.
[stdout] The following fix will be applied:
[stdout] 	* strictNonNullAssertions

[stdout] Starting wave 1...
[log] fixStrictNonNullAssertionObjectLiterals found 6 mutations in <rootDir>/actual.ts: [mutations]
[log] fixStrictNonNullAssertions found 6 mutations in <rootDir>/actual.ts: [mutations]
[stdout] Completed wave 1. Wrote mutations to 1 file.
[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting wave 2...
[stdout] Completed wave 2. Wrote mutations to 0 files.
[stdout] Done.

[stdout] Applying post-fix cleanups...
[stdout] Done.
"
`;

exports[`strictNonNullAssertions > propertyAccesses > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": true
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false,
        "strictNullChecks": true
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;

exports[`strictNonNullAssertions > propertyAccesses > output 1`] = `
"[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting the core mutation engine. This terminal will log whenever a "wave" of mutations are written to files.
[stdout] Core mutations will complete when two waves pass with no mutations.
[stdout] The following fix will be applied:
[stdout] 	* strictNonNullAssertions

[stdout] Starting wave 1...
[log] fixStrictNonNullAssertionBinaryExpressions found 7 mutations (6 insertions, 1 swaps) in <rootDir>/actual.ts: [mutations]
[log] fixStrictNonNullAssertions found 7 mutations (6 insertions, 1 swaps) in <rootDir>/actual.ts: [mutations]
[stdout] Completed wave 1. Wrote mutations to 1 file.
[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting wave 2...
[log] fixStrictNonNullAssertionPropertyAccesses found 158 mutations (158 insertions) in <rootDir>/actual.ts: [mutations]
[log] fixStrictNonNullAssertions found 158 mutations (158 insertions) in <rootDir>/actual.ts: [mutations]
[stdout] Completed wave 2. Wrote mutations to 1 file.
[stdout] Starting wave 3...
[stdout] Completed wave 3. Wrote mutations to 0 files.
[stdout] Done.

[stdout] Applying post-fix cleanups...
[log] suppressTypeIssues found 4 mutations (4 insertions) in <rootDir>/actual.ts: [mutations]
[stdout] Done.
"
`;

exports[`strictNonNullAssertions > returnTypes > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": true
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "strictNullChecks": true,
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "compilerOptions": {
          "strictNullChecks": true
        },
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;

exports[`strictNonNullAssertions > returnTypes > output 1`] = `
"[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting the core mutation engine. This terminal will log whenever a "wave" of mutations are written to files.
[stdout] Core mutations will complete when two waves pass with no mutations.
[stdout] The following fix will be applied:
[stdout] 	* strictNonNullAssertions

[stdout] Starting wave 1...
[log] fixStrictNonNullAssertionReturnTypes found 13 mutations in <rootDir>/actual.ts: [mutations]
[log] fixStrictNonNullAssertions found 13 mutations in <rootDir>/actual.ts: [mutations]
[stdout] Completed wave 1. Wrote mutations to 1 file.
[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting wave 2...
[stdout] Completed wave 2. Wrote mutations to 0 files.
[stdout] Done.

[stdout] Applying post-fix cleanups...
[stdout] Done.
"
`;
